fixing overflow bug on matdialog chart

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,7 @@ mat-dialog-container{
   white-space: nowrap;
  padding-top: 150px;
 }
+
+.mat-mdc-dialog-container .mdc-dialog__surface {
+  overflow: hidden;
+}
